Added form validation for Login and Sign up

--- a/src/styles/base/_elements.scss
+++ b/src/styles/base/_elements.scss
@@ -15,6 +15,10 @@
 .form-group {
   margin-bottom: 16px;
 }
+.input-feedback {
+  font-size: 14px;
+  color: $error-color;
+}
 
 .button {
   border: 1px solid $light-text-color;
@@ -37,5 +41,8 @@
     line-height: 48px;
     text-align: center;
     color: inherit;
+  }
+  &.muted {
+    border-color: transparent;
   }
 }
