Changed form layout

--- a/src/styles/base/_index.scss
+++ b/src/styles/base/_index.scss
@@ -1,5 +1,6 @@
 @import "./_variables.scss";
 @import "./_fonts.scss";
 @import "./_reset.scss";
+@import "./_grid.scss";
 @import "./_scaffolding.scss";
 @import "./_elements.scss";
