--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -6,7 +6,7 @@ $light-bg-color: #fbefee;
 // Text Color
 $text-color: #536287;
 $light-text-color: #b6bbcb;
-$error-color: #f44336;
+$error-color: #ec82a6;
 
 // Border Color
 $white: #fff;
