--- a/src/styles/base/_elements.scss
+++ b/src/styles/base/_elements.scss
@@ -14,11 +14,16 @@
 }
 textarea.form-control {
   padding-top: 8px;
-  min-height: 72px;
+  min-height: 126px;
   padding-bottom: 8px;
 }
 .form-group {
   margin-bottom: 16px;
+  //min-height: 90px;
+  & > label {
+    font-size: 14px;
+    opacity: 0.6;
+  }
 }
 .input-feedback {
   font-size: 14px;
@@ -31,10 +36,37 @@ textarea.form-control {
     background: $white;
     height: 44px;
     border-radius: 6px;
+    &.react-select__control--is-focused {
+      border-color: $primary-color;
+      box-shadow: none;
+    }
     .react-select__indicator-separator {
       display: none;
     }
   }
+}
+
+.react-datepicker {
+  border: 1px solid #ccc !important;
+  box-shadow: $default-box-shadow;
+}
+.react-datepicker-wrapper {
+  display: block !important;
+  .react-datepicker__input-container {
+    display: block;
+  }
+  .custom-date-picker {
+    border: 1px solid $light-text-color;
+    background: $white;
+    height: 44px;
+    border-radius: 6px;
+    padding: 0 16px;
+    width: 100%;
+    display: block;
+  }
+}
+.react-datepicker__time-list-item {
+  padding: 5px !important;
 }
 
 .button {
@@ -78,4 +110,63 @@ textarea.form-control {
   color: #3c763d;
   background-color: #dff0d8;
   border-color: #d6e9c6;
+}
+
+// Custon Fields Generator
+.custom-field-wrapper {
+  display: flex;
+  .form-control {
+    border-radius: 6px 0 0 6px;
+  }
+  .custom-select {
+    width: 120px;
+    flex-shrink: 0;
+    margin-left: -1px;
+    .react-select__control {
+      border-radius: 0 6px 6px 0;
+    }
+  }
+  .custom-checkbox {
+    margin-top: 4px;
+    display: flex;
+    align-items: center;
+    line-height: 24px;
+    input[type="checkbox"] {
+      display: none;
+      & + label {
+        cursor: pointer;
+        &:before {
+          content: "\002610";
+          font-size: 24px;
+          line-height: 24px;
+          vertical-align: text-bottom;
+        }
+      }
+      &:checked + label {
+        color: $primary-color;
+        &:before {
+          content: "\002611";
+          color: $primary-color;
+        }
+      }
+    }
+  }
+  .remove-button {
+    margin-top: 8px;
+    margin-left: auto;
+    height: 24px;
+    width: 80px;
+    font-size: 14px;
+    border-radius: 4px;
+    display: none;
+  }
+}
+.custom-field-group {
+  &:hover {
+    .custom-field-wrapper {
+      .remove-button {
+        display: block;
+      }
+    }
+  }
 }
