--- a/src/styles/common/_header.scss
+++ b/src/styles/common/_header.scss
@@ -82,10 +82,25 @@
       }
     }
     &.add-new {
-      background: $accent-color;
+      display: flex;
+      align-items: center;
+      background: $primary-color;
       width: auto;
       margin-left: auto;
       margin-right: 36px;
+      .icon {
+        margin-right: 8px;
+      }
+      @media (max-width: 480px) {
+        margin-right: 16px;
+        padding: 4px;
+        span {
+          display: none;
+        }
+        .icon {
+          margin-right: 0;
+        }
+      }
     }
   }
 }
