--- a/src/styles/pages/_event-add.scss
+++ b/src/styles/pages/_event-add.scss
@@ -1,5 +1,4 @@
 .add-event-form {
-  padding: 24px;
   .col-6,
   .col-12 {
     padding-left: 16px;
@@ -9,5 +8,11 @@
     color: $primary-color;
     font-size: 18px;
     font-weight: normal;
+  }
+  @media (max-width: 480px) {
+    margin: 0 -16px;
+    .button.primary {
+      max-width: 100% !important;
+    }
   }
 }
