--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -1,7 +1,71 @@
+.dashboard-tabs {
+  .react-tabs__tab-list {
+    border-bottom: 1px solid $border-color !important;
+  }
+  .react-tabs__tab--selected {
+    outline: none;
+    box-shadow: none;
+    color: $primary-color;
+    border: none;
+    border-bottom: 2px solid $primary-color !important;
+  }
+  .react-tabs__tab-panel {
+    margin: 24px 0;
+    min-height: 320px;
+  }
+}
+
 .event-item {
-  display: block;
+  color: $text-color;
+  display: flex;
   background: #f5f5f5;
-  padding: 16px;
   margin-bottom: 16px;
   border-radius: 6px;
+  .event-item-time {
+    flex-shrink: 0;
+    padding: 0 16px;
+    width: 120px;
+    margin: 16px;
+    border-right: 1px solid lighten($light-text-color, 12);
+    span {
+      display: block;
+    }
+    .date {
+      font-weight: bold;
+      font-size: 17px;
+      color: $primary-color;
+    }
+  }
+  .event-item-meta {
+    margin: 16px;
+    flex-grow: 1;
+    h4 {
+      font-size: 20px;
+      font-weight: normal;
+      line-height: 30px;
+      //margin-bottom: 8px;
+    }
+    p {
+      //color: $light-text-color;
+      font-size: 14px;
+    }
+    .icon {
+      opacity: 0.33;
+      margin-right: 6px;
+      vertical-align: middle;
+    }
+  }
+  @media (max-width: 480px) {
+    flex-direction: column;
+    .event-item-time {
+      padding: 0 0 8px 0;
+      width: auto;
+      margin: 16px 16px 0 16px;
+      border-right: none;
+      border-bottom: 1px solid #dadce4;
+    }
+    .event-item-meta {
+      margin-top: 8px;
+    }
+  }
 }
