--- a/src/styles/pages/_event-details.scss
+++ b/src/styles/pages/_event-details.scss
@@ -19,6 +19,62 @@
     }
   }
 }
+.event-banner {
+  margin-bottom: 36px;
+  img {
+    display: block;
+    width: 100%;
+  }
+}
 .event-description {
   margin-bottom: 36px;
+}
+
+.event-sidebar {
+  margin-left: 16px;
+  padding: 24px;
+  background: #f5f5f5;
+  border-radius: 6px;
+  h3 {
+    margin-bottom: 24px;
+    font-weight: normal;
+  }
+  @media (max-width: 480px) {
+    margin-left: 0;
+  }
+  &.creator-options {
+    margin-top: 24px;
+  }
+}
+.event-media-object {
+  display: flex;
+  margin-bottom: 16px;
+  .icon-wrapper {
+    margin-right: 16px;
+    opacity: 0.1;
+  }
+  .details-wrapper {
+    .title {
+      display: block;
+      color: $light-text-color;
+      font-size: 14px;
+      line-height: 14px;
+    }
+    .content {
+      display: block;
+      color: $text-color;
+    }
+  }
+}
+.creator-options {
+  .event-actions {
+    display: flex;
+    .button:first-child {
+      margin-right: 16px;
+    }
+    .icon {
+      vertical-align: text-bottom;
+      margin-right: 6px;
+    }
+  }
 }
